[package]
name = "ictp"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.10"
bytes = { version = "0.4", features = ["serde"] }
sodiumoxide = "0.2"
async-trait = "0.1"
dashmap = "1.0"

